World Background in 3D viewport - draw error #44565

Closed
opened 2015-04-30 19:43:42 +02:00 by filip mond · 13 comments

System Information
OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: Broken: 2.74 bf11e36

Short description of error
3D viewport has a display problem when world nodes are deleted and option "Display > World Background" is enabled in 3D window properties (N).
White square appear in a center and when viewport is rotated or what ever, screen is not redraw.

Screen_Shot_2015-04-30_at_19.22.19_copy.jpg

Hard to explain in english for me, better check the screencast.

Onother hand it's very artistic :) I will keep this version.

{F168667}Screen_Shot_2015-04-30_at_19.41.06_copy.jpg

**System Information** OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: Broken: 2.74 bf11e36 **Short description of error** 3D viewport has a display problem when world nodes are deleted and option "Display > World Background" is enabled in 3D window properties (N). White square appear in a center and when viewport is rotated or what ever, screen is not redraw. ![Screen_Shot_2015-04-30_at_19.22.19_copy.jpg](https://archive.blender.org/developer/F168665/Screen_Shot_2015-04-30_at_19.22.19_copy.jpg) Hard to explain in english for me, better check [the screencast](https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/WorldBackground-Error.mov). Onother hand it's very artistic :) I will keep this version. {[F168667](https://archive.blender.org/developer/F168667/Screen_Shot_2015-04-30_at_19.40.55_copy.jpg)}![Screen_Shot_2015-04-30_at_19.41.06_copy.jpg](https://archive.blender.org/developer/F168668/Screen_Shot_2015-04-30_at_19.41.06_copy.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

can you please post a .blend with the image stored in the .blend

can you please post a .blend with the image stored in the .blend
Author

What image? There is not used any external file. Also there wasn't any geometry in a scene. I just opened blender (to be more sure loaded factory setting) and did what you can see in video. White square appears ....

What image? There is not used any external file. Also there wasn't any geometry in a scene. I just opened blender (to be more sure loaded factory setting) and did what you can see in video. White square appears ....
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Member

I can not reproduce the issue can you please post a .blend when it is corrupt

I can not reproduce the issue can you please post a .blend when it is corrupt

Added subscriber: @mont29

Added subscriber: @mont29

I can confirm with default scene:

  • Switch to Cycles
  • Add default nodes for world
  • Enable WorldBackground in 3DView Display settings
  • Delete world nodes

File before deleting world nodes: wolrd_background_3dview_bug.blend
After deleting world nodes: wolrd_background_3dview_bug_b.blend

3DView background seems to be no more refreshed/erased before each draw… Antony, sounds one for you?

I can confirm with default scene: * Switch to Cycles * Add default nodes for world * Enable WorldBackground in 3DView Display settings * Delete world nodes File before deleting world nodes: [wolrd_background_3dview_bug.blend](https://archive.blender.org/developer/F168898/wolrd_background_3dview_bug.blend) After deleting world nodes: [wolrd_background_3dview_bug_b.blend](https://archive.blender.org/developer/F168899/wolrd_background_3dview_bug_b.blend) 3DView background seems to be no more refreshed/erased before each draw… Antony, sounds one for you?
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-05-01 10:21:55 +02:00

Thanks Bastien for the file!

Thanks Bastien for the file!

This issue was referenced by 28ea3f5b94

This issue was referenced by 28ea3f5b94175edcfd27612cf56d69106879d9a4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 28ea3f5b94.

Closed by commit 28ea3f5b94.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44565
No description provided.