Fix T44565 World background artifacts when world shader is void (or compilation fails).